# mahaipp

./: .gitignore  CMakeLists.txt  README.md  display.h  eval.h  hand.h  index.html  main.cpp  main.py  move_source.h  player.h  predicated.h  py_comms.h  pymod.cpp  test.cpp  types.h  utils.h
log5/: evaluations.npz  monitor.csv
